--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -175,6 +175,12 @@
         font-size: 0.8rem;
         padding: 0.5rem 0.75rem;
     }
+    .table thead th {
+        font-size: 0.7rem!important;
+        padding: 0.85rem 1rem;
+        text-align: center;
+    }
+
     .card .card-header {
         font-size: 0.95rem;
     }
